--- a/client-extensions/raylife-custom-element/src/common/styles/apps/example/index.scss
+++ b/client-extensions/raylife-custom-element/src/common/styles/apps/example/index.scss
@@ -1,3 +1,23 @@
+.example-structure {
+	.terms-and-conditions {
+
+		.scrollable-area {
+			height: 200px;
+		}
+
+		.checkbox-control label {
+			font-size: 1rem;
+			line-height: 1rem;
+		}
+
+		.checkbox-control input[type=checkbox] {
+			flex: unset;
+			min-height: unset;
+			margin-top: auto 0;
+		}
+	}
+}
+
 @media screen and (max-width: $breakpoint-tablet) {
 	.example-structure {
 		flex-direction: column;
